--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "16.8.3",
     "react-native": "0.59.10",
     "react-native-gesture-handler": "^1.3.0",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.11.0",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
